--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {
     "astro": "^0.22.20",
-    "autoprefixer": "^10.4.0",
-    "tailwindcss": "^3.0.5"
+    "autoprefixer": "^10.4.2",
+    "prettier-plugin-astro": "^0.0.12",
+    "tailwindcss": "^3.0.23"
   }
 }
