--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "astro": "^0.22.20",
     "autoprefixer": "^10.4.2",
     "prettier-plugin-astro": "^0.0.12",
+    "prettier-plugin-tailwindcss": "^0.1.7",
     "tailwindcss": "^3.0.23"
   }
 }
