--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^0.22.20",
+    "astro": "^0.23.0-next.0",
+    "astro-imagetools": "^0.0.16",
     "autoprefixer": "^10.4.2",
     "prettier-plugin-astro": "^0.0.12",
     "prettier-plugin-tailwindcss": "^0.1.7",
+    "sass": "^1.49.8",
     "tailwindcss": "^3.0.23"
   }
 }
