--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^0.23.0-next.0",
-    "astro-imagetools": "^0.0.16",
-    "autoprefixer": "^10.4.2",
+    "astro": "^1.0.0-beta.40",
+    "astro-imagetools": "^0.6.9",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
     "prettier-plugin-astro": "^0.0.12",
-    "prettier-plugin-tailwindcss": "^0.1.7",
-    "sass": "^1.49.8",
-    "tailwindcss": "^3.0.23"
+    "prettier-plugin-tailwindcss": "^0.1.11",
+    "sass": "^1.52.2",
+    "tailwindcss": "^3.0.24"
   }
 }
