--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/with-tailwindcss",
+  "name": "1787",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,13 +9,13 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^1.0.0-beta.40",
-    "astro-imagetools": "^0.6.9",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "prettier-plugin-astro": "^0.0.12",
-    "prettier-plugin-tailwindcss": "^0.1.11",
-    "sass": "^1.52.2",
-    "tailwindcss": "^3.0.24"
+    "astro": "^1.1.1",
+    "astro-imagetools": "^0.6.10",
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
+    "prettier-plugin-astro": "^0.5.3",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "sass": "^1.54.5",
+    "tailwindcss": "^3.1.8"
   }
 }
