--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
   },
   "devDependencies": {
     "astro": "1.0.1",
-    "astro-imagetools": "^0.6.10",
-    "autoprefixer": "^10.4.8",
-    "postcss": "^8.4.16",
-    "prettier-plugin-astro": "^0.5.3",
+    "astro-imagetools": "^0.6.17",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "prettier-plugin-astro": "^0.5.5",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "sass": "^1.54.5",
-    "tailwindcss": "^3.1.8"
+    "sass": "^1.97.0",
+    "tailwindcss": "^3.4.19"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "esbuild",
+      "sharp"
+    ]
   }
 }
